# aiortp

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: codec_roundtrip.py  dtmf.py  loopback.py  raw_packets.py  send_wav.py
src/aiortp/: __init__.py  audio.py  base_session.py  clock.py  dtmf.py  h264.py  jitterbuffer.py  packet.py  port_allocator.py  sender.py  session.py  stats.py  transport.py  video_session.py  vp8.py  vp9.py
src/aiortp/codecs/: __init__.py  base.py  g711.py  g722.py  opus.py  pcm.py
tests/: test_codecs.py  test_dtmf.py  test_g722_codec.py  test_h264.py  test_jitterbuffer.py  test_packet.py  test_port_allocator.py  test_rtcp.py  test_session.py  test_stats.py  test_video_session.py  test_vp8.py  test_vp9.py  utils.py
