[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiortp"
version = "0.1.0"
description = "Asyncio RTP/RTCP audio library"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
authors = [
    { name = "quintana" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.optional-dependencies]
opus = ["opuslib"]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aiortp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py311"
